tests/ui/with_args.rs
#[nanopass::langs(no no no)]
mod foo {}

fn main() {}
